# calculator

./: CMakeLists.txt  CMakeLists.txt.user.8a7428e  counter.cpp  counter.cpp.autosave  counter.h  historymodel.cpp  historymodel.h  main.cpp  main.cpp(old)  main.qml  main.qml(new)
